--- a/Roomate-app/public/html/profile.html
+++ b/Roomate-app/public/html/profile.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146101638-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'UA-146101638-1');
-	</script>
+  	<!-- Global site tag (gtag.js) - Google Analytics -->
+  	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146101638-1"></script>
+  	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+  		gtag('config', 'UA-146101638-1');
+  	</script>
+
     <!-- Meta Tags -->
     <meta charset="utf-8">
-    <!-- meta name="description" content="DESC" -->
-    <!-- meta name="author" content="COMPANY" -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="Keep your roommates in check with CheckMates.">
+    <meta name="author" content="Mates Co.">
     <meta property="og:type" content="Website Applicaiton" />
-    <!-- meta property="og:title" content="TITLE" / -->
-    <!-- meta property="og:description" content="DESC" / -->
-    <!-- meta property="og:url" content="URL" / -->
+    <meta property="og:title" content="CheckMates" />
+    <meta property="og:description" content="Keep your roommates in check" />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../css/animate.css">
     <link rel="stylesheet" type="text/css" href="../css/default.css">
+
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,700|Raleway:300,400,400i,700&display=swap" rel="stylesheet">
 
     <!-- Favicon -->
@@ -33,32 +34,36 @@
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+    <script src="../scripts/config.js"></script>
+		<script src="../scripts/login.js"></script>
+		<script src="../scripts/pageInitsAndRedirs.js"></script>
+    <script src="../scripts/displayScripts.js"></script>
+		<script src="../scripts/Space.js"></script>
+		<script src="../scripts/Mate.js"></script>
+		<script src="../scripts/Task.js"></script>
+
     <title>Welcome to CheckMates</title>
   </head>
   <body onload="initializeWelcome(); displayUserInfo()">
-      <div class="container">
-          <div class="center-items-container">
-              <div class="center-items">
-                <h3>Your Profile</h3>
-                <p class="animated fadeIn slower" id="FullName"> </p>
-                <p class="animated fadeIn slower" id="Email"> </p>
-                <br>
-                  <h3>Enter Nick Name</h3>
+    <div class="container">
+      <div class="center-items-container">
+        <div class="center-items">
+          <h3>Your Profile</h3>
+          <p class="animated fadeIn slower" id="FullName"> </p>
+          <p class="animated fadeIn slower" id="Email"> </p>
 
-                      <form>
-                          <input type="text" id="nameField">
-                      </form>
+          <br>
 
-                      <br>
+          <h3>Enter Nick Name</h3>
+          <form>
+              <input type="text" id="nameField">
+          </form>
 
-                  <button class="blue-btn" type="button" onclick="loginNewUser('../html/joinOrCreateSpace.html')">Submit</button>
-              </div>
-          </div>
+          <br>
+
+          <button class="blue-btn" type="button" onclick="loginNewUser('../html/joinOrCreateSpace.html')">Submit</button>
+        </div>
       </div>
-
-      <script src="../scripts/Mate.js"></script>
-      <script src="../scripts/config.js"></script>
-      <script src="../scripts/login.js"></script>
-
+    </div>
   </body>
 </html>
