Added functionality to populate Space class on overview.html onload(), then turn class into JSON string.

--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -36,7 +36,7 @@
 
     <title>CheckMates</title>
   </head>
-  <body onload="validate()">
+  <body onload="initializeOverview()">
     <div class="space container ">
       <div class="top-bar">
           <img class ="top-bar-logo " src="../images/logoCheckMates.png" alt="Checkmates Logo">
