--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -62,11 +62,11 @@
       <div class="center-items-container space-content">
         <div class="">
           <button class="blue-btn" type="button" onclick="redirect('../html/spaceKey.html')">Invite a Mate</button>
-          <button class="blue-btn" type="button" onclick="openMateList()">View Mates</button>
+          <!-- <button class="blue-btn" type="button" onclick="openMateList()">View Mates</button> -->
         </div>
         <div class="">
           <button class="blue-btn" type="button" onclick="redirectCreateTask()">Create a Task</button>
-          <button class="blue-btn" type="button" onclick="openTaskList()">View Tasks</button>
+          <!-- <button class="blue-btn" type="button" onclick="openTaskList()">View Tasks</button> -->
         </div>
       </div>
     </div>
