--- a/Roomate-app/public/html/tasklist.html
+++ b/Roomate-app/public/html/tasklist.html
@@ -44,11 +44,11 @@
 
     <title>Task List -- Test</title>
   </head>
-  <body onload="validate()">
+  <body onload="validate(); displayTasks()">
     <div class="container page">
       <div class="center-items-container">
         <div class="center-items">
-            <table id="taskList" onload="displayTasks()">
+            <table id="taskList">
             </table>
         </div>
       </div>
