Meidam/set nickname (#79)
* created data dump for mates in a space on new html page mateslist.html

--- a/Roomate-app/public/html/mateslist.html
+++ b/Roomate-app/public/html/mateslist.html
@@ -44,11 +44,11 @@
 
     <title>Task List -- Test</title>
   </head>
-  <body onload="validate(); displayTasks()">
+  <body onload="validate(); displayMates()">
     <div class="container page">
       <div class="center-items-container">
         <div class="center-items">
-            <table id="taskList">
+            <table id="mateList">
             </table>
         </div>
       </div>
