--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -44,6 +44,7 @@
 
     <title>CheckMates</title>
   </head>
+
   <body onload="initializeOverview(); displaySpaceInfo()">
     <div class="space container ">
       <div class="top-bar">
@@ -62,7 +63,7 @@
       <div class="center-items-container space-content">
         <div class="">
           <button class="blue-btn" type="button" onclick="redirect('../html/spaceKey.html')">Invite a Mate</button>
-          <!-- <button class="blue-btn" type="button" onclick="openMateList()">View Mates</button> -->
+          <button class="blue-btn" type="button" onclick="redirect('../html/mateslist.html')">View Mates</button>
         </div>
         <div class="">
           <button class="blue-btn" type="button" onclick="redirectCreateTask()">Create a Task</button>
