--- a/Roomate-app/public/html/joinOrCreateSpace.html
+++ b/Roomate-app/public/html/joinOrCreateSpace.html
@@ -54,16 +54,7 @@
 					<div class="center-items">
 						<button type="button" class="blue-btn" onclick="redirectCreateNewSpace()">Create a new space</button>
 						<p> </p>
-						<button type="button" class="blue-btn" onclick="openForm()">Join an existing space</button>
-					</div>
-					<div class="form-popup" id="frmSpaceIDPopup">
-						<form class="form-container">
-							<h3>Join Your Mates Space</h3>
-							<label for="SpaceID"><b>Enter Space ID</b></label>
-							<input id="userSpaceID" type="text" placeholder="Space ID" name="SpaceID" required>
-							<button type="button" class="btn" onclick="joinExistingSpace()">Join Space</button>
-							<button type="button" class="btn cancel" onclick="closeForm()">Cancel</button>
-						</form>
+						<button type="button" class="blue-btn" onclick="redirect('./joinSpace.html')">Join an existing space</button>
 					</div>
 				</div>
       </div>
