--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -38,6 +38,7 @@
     <script src="../scripts/login.js"></script>
     <script src="../scripts/pageInitsAndRedirs.js"></script>
     <script src="../scripts/displayScripts.js"></script>
+    <script src="../scripts/sortTasks.js"></script>
     <script src="../scripts/Space.js"></script>
     <script src="../scripts/Mate.js"></script>
     <script src="../scripts/Task.js"></script>
