--- a/Roomate-app/public/html/createNewSpace.html
+++ b/Roomate-app/public/html/createNewSpace.html
@@ -37,10 +37,11 @@
 		<script src="../scripts/config.js"></script>
 		<script src="../scripts/login.js"></script>
 		<script src="../scripts/pageInitsAndRedirs.js"></script>
-    <script src="../scripts/displayScripts.js"></script>
+		<script src="../scripts/displayScripts.js"></script>
 		<script src="../scripts/Space.js"></script>
 		<script src="../scripts/Mate.js"></script>
 		<script src="../scripts/Task.js"></script>
+		<script src="../scripts/utility.js"></script>
 
     <title>Create a Space</title>
 	</head>
