Quick fix to scripts

--- a/Roomate-app/public/html/profile.html
+++ b/Roomate-app/public/html/profile.html
@@ -40,7 +40,8 @@
     <script src="../scripts/displayScripts.js"></script>
 		<script src="../scripts/Space.js"></script>
 		<script src="../scripts/Mate.js"></script>
-		<script src="../scripts/Task.js"></script>
+    <script src="../scripts/Task.js"></script>
+    <script src="../scripts/utility.js"></script>
 
     <title>Welcome to CheckMates</title>
   </head>
