--- a/Roomate-app/public/html/joinOrCreateSpace.html
+++ b/Roomate-app/public/html/joinOrCreateSpace.html
@@ -41,6 +41,7 @@
 		<script src="../scripts/Space.js"></script>
 		<script src="../scripts/Mate.js"></script>
 		<script src="../scripts/Task.js"></script>
+		<script src="../scripts/utility.js"></script>
 
     <title>Create/Join a Space</title>
 	</head>
