--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -43,6 +43,7 @@
 	<!-- <script src="../scripts/sortTasks.js"></script> -->
     <script src="../scripts/Mate.js"></script>
     <script src="../scripts/Task.js"></script>
+    <script src="../scripts/utility.js"></script>
 
     <title>CheckMates</title>
   </head>
