--- a/Roomate-app/public/html/tasklist.html
+++ b/Roomate-app/public/html/tasklist.html
@@ -42,6 +42,7 @@
 		<script src="../scripts/Mate.js"></script>
     <script src="../scripts/Task.js"></script>
     <script src="../scripts/utility.js"></script>
+    <script src="../scripts/RecurringTaskFactory.js"></script>
 
     <title>Task List -- Test</title>
   </head>
