--- a/Roomate-app/public/html/tasklist.html
+++ b/Roomate-app/public/html/tasklist.html
@@ -40,7 +40,9 @@
     <script src="../scripts/displayScripts.js"></script>
 		<script src="../scripts/Space.js"></script>
 		<script src="../scripts/Mate.js"></script>
-		<script src="../scripts/Task.js"></script>
+    <script src="../scripts/Task.js"></script>
+    <script src="../scripts/utility.js"></script>
+    <script src="../scripts/RecurringTaskFactory.js"></script>
 
     <title>Task List -- Test</title>
   </head>
