Mini modifications and calling async and await on specific functions

--- a/Roomate-app/public/html/createTask.html
+++ b/Roomate-app/public/html/createTask.html
@@ -101,7 +101,7 @@
           </div>
         </form>
 
-        <button class="blue-btn" type="button" onclick="createFirestoreTask()" style="position:sticky;">Create Task</button>
+        <button class="blue-btn" type="button" onclick="createTaskByFactory()" style="position:sticky;">Create Task</button>
         </div>
       </div>
     </div>
