Fixed space display on creation

--- a/Roomate-app/public/html/createNewSpace.html
+++ b/Roomate-app/public/html/createNewSpace.html
@@ -63,7 +63,7 @@
             <br><br>
           </form>
 
-          <button type="button" class="blue-btn" onclick="createFirestoreSpace()">Create Space</button>
+          <button type="button" class="blue-btn" onclick="createSpace()">Create Space</button>
 					<br>
           <button type="button" class="blue-btn cancel" onclick="redirect('./joinOrCreateSpace.html')">Cancel</button>
         </div>
