--- a/Roomate-app/public/html/spaceKey.html
+++ b/Roomate-app/public/html/spaceKey.html
@@ -45,7 +45,7 @@
 
     <title>Space Key</title>
   </head>
-<body onload="validate(); displaySpaceInfo()">
+<body onload="initializeSpaceKey()">
     <div class="container center-items-container">
       <div class="center-items">
         <h3 id="showName"></h3>
