--- a/Roomate-app/public/html/joinSpace.html
+++ b/Roomate-app/public/html/joinSpace.html
@@ -58,7 +58,7 @@
             <br>
           </form>
           <br>
-          <button type="button" class="blue-btn" onclick="joinExistingSpace()">Join Space</button>
+          <button type="button" class="blue-btn" onclick="addMateToSpace()">Join Space</button>
           <br>
           <button type="button" class="blue-btn cancel" onclick="redirect('./joinOrCreateSpace.html')">Cancel</button>
         </div>
