got auto refresh for display mates page working, auto refresh should work but getAllTasks function is currently returning an empty array

--- a/Roomate-app/public/html/mateslist.html
+++ b/Roomate-app/public/html/mateslist.html
@@ -40,13 +40,13 @@
     <script src="../scripts/displayScripts.js"></script>
 		<script src="../scripts/Space.js"></script>
 		<script src="../scripts/Mate.js"></script>
-		<script src="../scripts/Task.js"></script>
-    <script scr="../utility.js"></script>
+    <script src="../scripts/Task.js"></script>
+    <script src="../scripts/utility.js"></script>
     <script src="../scripts/checkForMateUpdates.js"></script>
 
-    <title>Task List -- Test</title>
+    <title>Mates List</title>
   </head>
-  <body onload="displayMates()">
+  <body onload="displayMates(document.getElementById('mateList'))">
     <div class="container page">
       <div class="center-items-container">
         <div class="center-items">
