--- a/Roomate-app/public/html/tasklist.html
+++ b/Roomate-app/public/html/tasklist.html
@@ -43,10 +43,11 @@
     <script src="../scripts/Task.js"></script>
     <script src="../scripts/utility.js"></script>
     <script src="../scripts/RecurringTaskFactory.js"></script>
+    <script src="../scripts/checkForTaskUpdates.js"></script>
 
     <title>Task List -- Test</title>
   </head>
-  <body onload="validate(); displayTasks()">
+  <body onload="displayTasks(document.getElementById('taskList'))">
     <div class="container page">
       <div class="center-items-container">
         <div class="center-items">
