--- a/Roomate-app/public/html/createTask.html
+++ b/Roomate-app/public/html/createTask.html
@@ -42,6 +42,8 @@
 		<script src="../scripts/Mate.js"></script>
     <script src="../scripts/Task.js"></script>
     <script src="../scripts/utility.js"></script>
+    <script src="../scripts/RecurringTaskFactory.js"></script>
+    <script src="../scripts/NonRecurringTaskFactory.js"></script>
 
     <title>Create a Task</title>
   </head>
@@ -101,7 +103,7 @@
           </div>
         </form>
 
-        <button class="blue-btn" type="button" onclick="createFirestoreTask()" style="position:sticky;">Create Task</button>
+        <button class="blue-btn" type="button" onclick="createTaskByFactory()" style="position:sticky;">Create Task</button>
         </div>
       </div>
     </div>
