fixed issues with pages only loading when you refresh

--- a/Roomate-app/public/html/mateslist.html
+++ b/Roomate-app/public/html/mateslist.html
@@ -46,7 +46,7 @@
 
     <title>Mates List</title>
   </head>
-  <body onload="displayMates(document.getElementById('mateList'))">
+  <body onload="mateListInit()">
     <div class="container page">
       <div class="center-items-container">
         <div class="center-items">
