--- a/Roomate-app/public/html/tasklist.html
+++ b/Roomate-app/public/html/tasklist.html
@@ -47,7 +47,7 @@
 
     <title>Task List -- Test</title>
   </head>
-  <body onload="displayTasks(document.getElementById('taskList'))">
+  <body onload="taskListInit()">
     <div class="container page">
       <div class="center-items-container">
         <div class="center-items">
