--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -36,39 +36,42 @@
 
     <script src="../scripts/config.js"></script>
     <script src="../scripts/login.js"></script>
-	<script src="../scripts/Space.js"></script>
-	<script src="../scripts/displayScripts.js"></script>
-	<script src="../scripts/utility.js"></script>
+    <script src="../scripts/Space.js"></script>
+    <script src="../scripts/displayScripts.js"></script>
+    <script src="../scripts/utility.js"></script>
     <script src="../scripts/pageInitsAndRedirs.js"></script>
-	<!-- <script src="../scripts/sortTasks.js"></script> -->
+    <!-- <script src="../scripts/sortTasks.js"></script> -->
     <script src="../scripts/Mate.js"></script>
     <script src="../scripts/Task.js"></script>
     <script src="../scripts/utility.js"></script>
 
     <title>CheckMates</title>
   </head>
-
-  <body onload="initializeOverview();">
-    <div class="space container ">
-      <div class="top-bar">
-          <img class ="top-bar-logo " src="../images/logoCheckMates.png" alt="Checkmates Logo">
-          <div class="space-information ">
-              <h3 id="showName"></h3>
-              <h4 id="showDescription"></h4>
-          </div>
-          <div class="">
-            <button class="blue-btn" type="button" onclick="logout()">Logout</button>
-          </div>
+<!--  onload="initializeOverview(); -->
+  <body class="test">
+    <div class="space container test">
+      <div class="top-bar test">
+        <img class ="top-bar-logo test" src="../images/logoCheckMates.png" alt="Checkmates Logo">
+        <div class="space-information test">
+          <h3 id="showName">Boop</h3>
+          <h4 id="showDescription">Scoop diddly doop</h4>
+        </div>
+        <div class="test">
+          <button class="blue-btn" type="button" onclick="logout()">Logout</button>
+        </div>
       </div>
 
       <br>
 
-      <div class="center-items-container space-content">
-        <div class="">
+      <div class="space-content test">
+        <!-- Mate Section -->
+        <div class="test">
           <button class="blue-btn" type="button" onclick="redirectSpaceKey()">Invite a Mate</button>
           <button class="blue-btn" type="button" onclick="openMateList()">View Mates</button>
         </div>
-        <div class="">
+
+        <!-- Task Section -->
+        <div class="test">
           <button class="blue-btn" type="button" onclick="redirectCreateTask()">Create a Task</button>
           <button class="blue-btn" type="button" onclick="openTaskList()">View Tasks</button>
         </div>
