--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -44,7 +44,7 @@
 
     <title>CheckMates</title>
   </head>
-  <body onload="initialize()">
+  <body onload="initialize(); mateListInit()">
     <div id="message">
       <div class="container">
         <div class="center-items-container">
