Made it so task list and mates list refreshes when a Mate or Task firestore object is modified, favourMate is now called favorMateID in all js functions, task firestore object now saves the space ID

--- a/Roomate-app/public/html/tasklist.html
+++ b/Roomate-app/public/html/tasklist.html
@@ -43,6 +43,7 @@
     <script src="../scripts/Task.js"></script>
     <script src="../scripts/utility.js"></script>
     <script src="../scripts/RecurringTaskFactory.js"></script>
+    <script src="../scripts/NonRecurringTaskFactory.js"></script>
     <script src="../scripts/checkForTaskUpdates.js"></script>
 
     <title>Task List -- Test</title>
