--- a/Roomate-app/public/html/profile.html
+++ b/Roomate-app/public/html/profile.html
@@ -62,7 +62,7 @@
 
           <br>
 
-          <button class="blue-btn" type="button" onclick="loginNewUser('../html/joinOrCreateSpace.html')">Submit</button>
+          <button class="blue-btn" type="button" onclick="editNickName()">Submit</button>
         </div>
       </div>
     </div>
