Added a button to overview called Profile so the user can edit their nickname

--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -58,6 +58,7 @@
           </div>
           <div class="">
             <button class="blue-btn" type="button" onclick="logout()">Logout</button>
+            <button class="blue-btn" type="button" onclick="redirect('./profile.html')">Profile</button>
           </div>
       </div>
 
