--- a/Roomate-app/public/html/profile.html
+++ b/Roomate-app/public/html/profile.html
@@ -57,7 +57,7 @@
 
           <h3>Enter Nick Name</h3>
           <form>
-              <input type="text" id="nameField">
+              <input type="text" id="nickNameField">
           </form>
 
           <br>
