--- a/Roomate-app/public/html/profile.html
+++ b/Roomate-app/public/html/profile.html
@@ -57,12 +57,12 @@
 
           <h3>Enter Nick Name</h3>
           <form>
-              <input type="text" id="nameField">
+              <input type="text" id="nickNameField">
           </form>
 
           <br>
 
-          <button class="blue-btn" type="button" onclick="loginNewUser('../html/joinOrCreateSpace.html')">Submit</button>
+          <button class="blue-btn" type="button" onclick="editNickName()">Submit</button>
         </div>
       </div>
     </div>
