moved mates to overview (#130)
* Fixed mobile responsiveness for current

* Added mates table to overview, along with matelistinit function

* mate list in mobile shows names

--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -36,42 +36,47 @@
 
     <script src="../scripts/config.js"></script>
     <script src="../scripts/login.js"></script>
-	<script src="../scripts/Space.js"></script>
-	<script src="../scripts/displayScripts.js"></script>
-	<script src="../scripts/utility.js"></script>
+    <script src="../scripts/Space.js"></script>
+    <script src="../scripts/displayScripts.js"></script>
+    <script src="../scripts/utility.js"></script>
     <script src="../scripts/pageInitsAndRedirs.js"></script>
-	<!-- <script src="../scripts/sortTasks.js"></script> -->
+    <!-- <script src="../scripts/sortTasks.js"></script> -->
     <script src="../scripts/Mate.js"></script>
     <script src="../scripts/Task.js"></script>
     <script src="../scripts/utility.js"></script>
+    <script src="../scripts/checkForMateUpdates.js"></script>
+    <script src="../scripts/checkForTaskUpdates.js"></script>
 
     <title>CheckMates</title>
   </head>
-
-  <body onload="initializeOverview();">
-    <div class="space container ">
-      <div class="top-bar">
-          <img class ="top-bar-logo " src="../images/logoCheckMates.png" alt="Checkmates Logo">
-          <div class="space-information ">
-              <h3 id="showName"></h3>
-              <h4 id="showDescription"></h4>
-          </div>
-          <div class="">
-            <button class="blue-btn" type="button" onclick="logout()">Logout</button>
-            <button class="blue-btn" type="button" onclick="redirect('./profile.html')">Profile</button>
-          </div>
+  <body onload="initializeOverview(); mateListInit(); taskListInit()">
+    <div class="space container">
+      <div class="top-bar ">
+        <img class ="top-bar-logo " src="../images/logoCheckMates.png" alt="Checkmates Logo">
+        <div class="space-information ">
+          <h3 id="showName">Title</h3>
+          <p id="showDescription">Description</h4>
+        </div>
+        <div class="profile-btns ">
+          <button class="blue-btn" type="button" onclick="logout()">Logout</button>
+          <button class="blue-btn" type="button" onclick="redirect('./profile.html')">Profile</button>
+        </div>
       </div>
 
-      <br>
-
-      <div class="center-items-container space-content">
-        <div class="">
-          <button class="blue-btn" type="button" onclick="redirectSpaceKey()">Invite a Mate</button>
-          <button class="blue-btn" type="button" onclick="openMateList()">View Mates</button>
+      <div class="space-content ">
+        <!-- Mate Section -->
+        <div class="mate-sect ">
+          <button class="blue-btn " type="button" onclick="redirectSpaceKey()">Invite a Mate</button>
+          <br>
+          <table class="" id="mateList">
+          </table>
         </div>
-        <div class="">
+
+        <!-- Task Section -->
+        <div class="task-sect ">
           <button class="blue-btn" type="button" onclick="redirectCreateTask()">Create a Task</button>
-          <button class="blue-btn" type="button" onclick="openTaskList()">View Tasks</button>
+          <!-- <table id="taskList">
+          </table> -->
         </div>
       </div>
     </div>
